# dermatomicos-Bago

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.example.json  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PRODUCT.md  RISK_REGISTER.md  VOICE_NOTES.md
evals/datasets/: extraction.es-PE.v1.jsonl
scripts/: check_azure_environment.py  record_dataset.py  render_architecture.py
src/dermatomicos_bago/: cli.py  config.py
src/dermatomicos_bago/audio/: capture.py  windowing.py
src/dermatomicos_bago/models/: labels.py  scratch.py  yamnet.py
src/dermatomicos_bago/pipeline/: detector.py  events.py  features.py  nights.py  report.py  severity.py  smoothing.py  trend.py
src/lumi/: __init__.py
src/lumi/adapters/: __init__.py  system.py
src/lumi/adapters/ai/: __init__.py  _sanitize.py  _strict_jsonschema.py  azure_openai.py  config.py  schemas.py
src/lumi/adapters/ai/prompts/: observation-extractor.es-PE.v1.md  plan-extractor.es-PE.v1.md
src/lumi/adapters/channel/: console.py
src/lumi/adapters/media/: __init__.py  azure_whisper.py  canned.py  faster_whisper.py
src/lumi/adapters/persistence/: __init__.py  in_memory.py
src/lumi/adapters/reports/: __init__.py  markdown.py  pdf.py
src/lumi/api/: __init__.py  bootstrap.py  cli.py  router.py  seed.py  voice_samples.py  web.py
src/lumi/api/static/: index.html
src/lumi/application/: __init__.py  ai_mapping.py  commands.py  results.py  service.py
src/lumi/domain/: __init__.py  audit.py  checkin.py  enums.py  errors.py  identity.py  ids.py  media.py  pattern_detection.py  patterns.py  plan.py  provenance.py  relative_dates.py  report.py  safety_decision.py  signals.py  treatment.py  views.py
src/lumi/ports/: __init__.py  ai.py  channel.py  clock.py  ids.py  policy.py  repository.py  transcription.py
src/lumi/safety/: __init__.py  policy.py  rules.py
src/lumi/safety/rulesets/: __init__.py  v1.py
tests/: test_capture.py  test_cli_finalize.py  test_detector_replay.py  test_events.py  test_features.py  test_labels.py  test_nights.py  test_report.py  test_scratch.py  test_severity.py  test_smoothing.py  test_trend.py  test_windowing.py  test_yamnet_integration.py
tests/lumi/: conftest.py  test_application.py  test_boundaries.py  test_domain_invariants.py  test_pattern_detection.py  test_relative_dates.py  test_router.py  test_seed.py  test_voice_api.py  test_web_api.py
tests/lumi/ai/: test_adapter.py  test_live_model.py  test_mapping.py  test_sanitizer.py  test_strict_schema.py
tests/lumi/eval/: README.md  test_eval_harness.py
tests/lumi/media/: test_azure_whisper.py  test_faster_whisper_slow.py  test_transcription.py
tests/lumi/reports/: test_pdf.py
