[project]
name = "dermatomicos-Bago"
version = "0.1.0"
description = "TODO: one-line description"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.2",
    "pyarrow>=15.0",
    "rich>=13.0",
    "tensorflow>=2.21.0",
    "tensorflow-hub>=0.16.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "scipy>=1.17.1",
    "scikit-learn>=1.9.0",
    "joblib>=1.5.3",
    "setuptools<81",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
derma = "dermatomicos_bago.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dermatomicos_bago"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: descarga modelos / usa hardware"]

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
